--- a/ServeyCustomer.html
+++ b/ServeyCustomer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Market Research Survey</title>
     <style>
-        .table{
+        .text{
             width: 700px;
             height: 100px;
         }
@@ -14,10 +14,17 @@
         .lop2{
             width: 70px;
         }
-        .lop3{
+        <!--.lop3{
             width: 100px;
             text-align: center;
+        }-->
+        table, th, td {
+            border: 1px solid black;
+            border-collapse: collapse;
+            text-align: center;
         }
+        td{width: 100px}
+
     </style>
 </head>
 <body>
@@ -44,7 +51,7 @@
         <label><input type="radio" name="female" value="Female">Female</label><br>
         <label><input type="radio" name="nonbinary " value="Nonbinary">Nonbinary</label><br>
         <label><input type="radio" name="other" value="Other">Other</label><br><br>
-        <label><input type="text" name="other" value maxlength="250">
+        <label><input type="text" name="other" value maxlength="250"></label>
     </p>
     <p><b>Which of the following products have your purchased in the last 2 months. Please check all that apply.</b><br>
         <label><input type="checkbox" name="product1">Product1</label><br>
@@ -61,10 +68,10 @@
     <pre> Dollars                   Cents</pre>
     </p>
     <p><b>What features would you like to see in the new product.</b><br>
-        <input type="text" name="product" class="table">
+        <input type="text" name="product" class="text">
     </p>
     <p><b>Please rate your level of agreement with the following statements.</b></p>
-    <table cellspacing="0" border="1">
+    <table border="1" style="width: 65%"> <!--hoac la <table cellspacing="0" border="1"> -->
         <thead>
         <tr>
             <th>      </th>
@@ -79,19 +86,19 @@
             <th>
                 <label>Our products are priced fairly.</label>
             </th>
-            <td title="Strongly Disagree" class="lop3">
+            <td title="Strongly Disagree">
                 <input type="radio" name="radio"><br>
                 <label a>1</label>
             </td>
-            <td title="Disagree" class="lop3">
+            <td title="Disagree">
                 <input type="radio" name="radio"><br>
                 <label>2</label>
             </td>
-            <td title="Agree" class="lop3">
+            <td title="Agree">
                 <input type="radio" name="radio"><br>
                 <label>3</label>
             </td>
-            <td title="Strongly Agree" class="lop3">
+            <td title="Strongly Agree">
                 <input type="radio" name="radio"><br>
                 <label>4</label>
             </td>
@@ -100,19 +107,19 @@
             <th>
                 <label>Our products are high quality.</label>
             </th>
-            <td title="Strongly Disagree" class="lop3">
+            <td title="Strongly Disagree">
                 <input type="radio" name="radio"><br>
                 <label>1</label>
             </td>
-            <td title="Disagree" class="lop3">
+            <td title="Disagree">
                 <input type="radio" name="radio"><br>
                 <label>2</label>
             </td>
-            <td title="Agree" class="lop3">
+            <td title="Agree">
                 <input type="radio" name="radio"><br>
                 <label>3</label>
             </td>
-            <td title="Strongly Agree" class="lop3">
+            <td title="Strongly Agree">
                 <input type="radio" name="radio"><br>
                 <label>4</label>
             </td>
@@ -121,19 +128,19 @@
             <th>
                 <label>You would recommend our product to a friend or coworker.</label>
             </th>
-            <td title="Strongly Disagree" class="lop3">
+            <td title="Strongly Disagree">
                 <input type="radio" name="radio"><br>
                 <label>1</label>
             </td>
-            <td title="Disagree" class="lop3">
+            <td title="Disagree">
                 <input type="radio" name="radio"><br>
                 <label>2</label>
             </td>
-            <td title="Agree" class="lop3">
+            <td title="Agree">
                 <input type="radio" name="radio"><br>
                 <label>3</label>
             </td>
-            <td title="Strongly Agree" class="lop3">
+            <td title="Strongly Agree">
                 <input type="radio" name="radio"><br>
                 <label>4</label>
             </td>
